# langchain-rag-practice

./: .editorconfig  .example.envrc  .gitignore  README.md  pyproject.toml  requirements.txt
ch03/: 01_models.ipynb  output_parser.ipynb  prompt_template.ipynb
ch04/: 02_other_document_loaders.ipynb  03_text_splitters.ipynb  pdf_document_loaders.ipynb
ch05/: 01_text_embedding.ipynb  02_vector_store.ipynb  03_retriever.ipynb  04_lcel.ipynb  05_basic_rag.ipynb  05_init_local_model.sh  05_modelfile.txt  basic_rag.ipynb
ch06/: 01_streamlit_chat.py  02_streamlit_rag_local.py  03_streamlit_rag_upload.py  04_streamlit_rag_memory.py  05_tool&agent.ipynb
