[project]
name = "langchain-rag-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic==0.49.0",
    "docx2txt==0.9",
    "grandalf>=0.8",
    "huggingface-hub>=0.32.4",
    "jupyter==1.1.1",
    "langchain==0.3.23",
    "langchain-anthropic==0.3.10",
    "langchain-chroma>=0.2.4",
    "langchain-community==0.3.21",
    "langchain-experimental==0.3.4",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langchain-openai==0.3.12",
    "langchain-text-splitters==0.3.8",
    "openai==1.73.0",
    "pypdf==5.4.0",
    "pypdfium2==4.30.1",
    "python-dotenv==1.1.0",
    "python-pptx==1.0.2",
    "rapidocr-onnxruntime==1.2.3",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "unstructured==0.17.2",
]
